FenicsPDE/MOND/jupyternbs/dolfin_reports/jitfailure-dolfin_expression_e337f282a38dec1dc5cdbfaa869852a4/error.log
/tmp/tmp7i2w7dxa/dolfin_expression_e337f282a38dec1dc5cdbfaa869852a4.cpp: In member function ‘virtual void dolfin::dolfin_expression_e337f282a38dec1dc5cdbfaa869852a4::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmp7i2w7dxa/dolfin_expression_e337f282a38dec1dc5cdbfaa869852a4.cpp:78:36: error: ‘position_x0’ was not declared in this scope
           values[0] = (((pow((x[0]-position_x0),2)+pow((x[1]-position_y0),2)+pow((x[2]-position_z0),2)) <=pow(radius_tot, 2)) ||((pow((x[0]-position_x1),2)+pow((x[1]-position_y1),2)+pow((x[2]-position_z1),2)) <=pow(radius_tot, 2)))? a0*4*pi*G*source_mass/volume_out : 0;
                                    ^~~~~~~~~~~
/tmp/tmp7i2w7dxa/dolfin_expression_e337f282a38dec1dc5cdbfaa869852a4.cpp:78:36: note: suggested alternative: ‘position_y0’
           values[0] = (((pow((x[0]-position_x0),2)+pow((x[1]-position_y0),2)+pow((x[2]-position_z0),2)) <=pow(radius_tot, 2)) ||((pow((x[0]-position_x1),2)+pow((x[1]-position_y1),2)+pow((x[2]-position_z1),2)) <=pow(radius_tot, 2)))? a0*4*pi*G*source_mass/volume_out : 0;
                                    ^~~~~~~~~~~
                                    position_y0
/tmp/tmp7i2w7dxa/dolfin_expression_e337f282a38dec1dc5cdbfaa869852a4.cpp: In member function ‘virtual double dolfin::dolfin_expression_e337f282a38dec1dc5cdbfaa869852a4::get_property(std::__cxx11::string) const’:
/tmp/tmp7i2w7dxa/dolfin_expression_e337f282a38dec1dc5cdbfaa869852a4.cpp:90:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "a0") return a0;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;          if (name == "stand_dev") return stand_dev;          if (name == "p") return p;          if (name == "position_y0") return position_y0;          if (name == "position_z0") return position_z0;          if (name == "position_x1") return position_x1;          if (name == "position_y1") return position_y1;          if (name == "position_z1") return position_z1;          if (name == "source_number") return source_number;          if (name == "source_mass") return source_mass;
           ^~
/tmp/tmp7i2w7dxa/dolfin_expression_e337f282a38dec1dc5cdbfaa869852a4.cpp:90:49: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "a0") return a0;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;          if (name == "stand_dev") return stand_dev;          if (name == "p") return p;          if (name == "position_y0") return position_y0;          if (name == "position_z0") return position_z0;          if (name == "position_x1") return position_x1;          if (name == "position_y1") return position_y1;          if (name == "position_z1") return position_z1;          if (name == "source_number") return source_number;          if (name == "source_mass") return source_mass;
                                                 ^~
